--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -1,27 +1,50 @@
 \chapter{Untersuchung von Gold im RTM}
 
-Um die Funktionsweise des RTM im Bereich größer der atomaren Auflösung von Graphit-Gittern zu überprüfen, wird zunächst die Oberflächentopologie einer mit Gold bedampften Silizium- oder Saphir-Probe untersucht.
+Um die Funktionsweise des RTM im Bereich größer der atomaren Auflösung von Graphit-Gittern zu überprüfen, wird zunächst die Oberflächentopologie einer mit Gold bedampften Silizium- oder Saphir-Probe untersucht. Welche der beiden Probenarten untersucht wurde, kann anhand des erhaltenden RTM-Bilds erschlossen werden, die Proben waren jedoch nicht beschriftet. Es werden die beiden Goldproben (Probe 1: Nummer 16, Probe 2: Nummer 14) nacheinander mit dem RTF untersucht.
+
+
 
 \section{Theoretische Überlegungen}
+Es wird nicht direkt Gold untersucht, welches aufgrund seiner elektrisch relativ flachen kristallinen Struktur isoliert zu nur wenige kontrastreichen Aufnahmen führen würde \cite[59-60]{STMrohrer}. Stattdessen werden Proben von Silizium bzw. Saphir verwendet, auf welche Gold aufgedampft wurde \cite[13]{Versuchsanleitung422}.
 
-%insert stuff here
-
-\section{Experimenteller Aufbau}
-%wenn noch etwas anderes als bei generellem Aufbau hier
+Auf der glatten Si- oder Saphir-Oberfläche sind so kleine Goldkügelchen ohne festes Muster angeordnet. Sie sollten so bei supra-atomaren Auflösungen des Mikroskops gut sichtbar sein. Eine atomare Auflösung ist bei diesen Proben auch nicht sinnvoll, da Gold, wie genannt, sehr gleichmäßige Elektronenverteilungen aufweist und so keine deutlichen Strukturen innerhalb des Kristallgitters erkennbar sein würden. Durch den Erhitzungsprozess kann allerdings damit gerechnet werden, dass die Goldkügelchen in ihrer Oberfläche stufenförmige Strukturen aufweisen anstatt vollständig glatt zu sein, allerdings ist die Ausprägung der Stufen stark von der erreichten Temperatur während des Erhitzens abhängig \cite[59]{STMrohrer}. Außerdem ist zu beachten, dass die vermessenen Proben
 
 
-Es werden zwei Goldproben mit dem RTM untersucht. Hierbei wird nicht direkt Gold untersucht, welches aufgrund seiner elektrisch relativ flachen kristallinen Struktur isoliert zu nur wenige kontrastreichen Aufnahmen führen würde \cite[59-60]{STMrohrer}. Stattdessen werden Proben von Silizium bzw. Saphir verwendet, auf welche Gold aufgedampft wurde \cite[13]{Versuchsanleitung422}.
-
-Auf der glatten Si- oder Saphir-Oberfläche sind so kleine Goldkügelchen ohne festes Muster angeordnet. Sie sollten so bei supra-atomaren Auflösungen des Mikroskops gut sichtbar sein. Eine atomare Auflösung ist bei diesen Proben auch nicht sinnvoll, da Gold, wie genannt, sehr gleichmäßige Elektronenverteilungen aufweist und so keine deutlichen Strukturen innerhalb des Kristallgitters erkennbar sein würden. Durch den Erhitzungsprozess kann allerdings damit gerechnet werden, dass die Goldkügelchen in ihrer Oberfläche stufenförmige Strukturen aufweisen anstatt vollständig glatt zu sein, allerdings ist die Ausprägung der Stufen stark von der erreichten Temperatur während des Erhitzens abhängig \cite[59]{STMrohrer}.
 
 
 %Da die Goldproben durch die unvorhersehbar verteilten Goldkügelchen hohe Korrugation aufweisen, wird im Folgenden das RTM immer im \textit{constant current}-Modus betrieben. Die Parameter des Regelkreises waren dabei auf $P=1000, I=2000$ eingestellt. Eine Aufnahme im \textit{constant height}-Modus hätte eine ausreichend ebene Fläche erfordert, was aber bei den Goldproben zu keinen interessanten Ergebnissen geführt hätte: Es war zu erwarten, dass die Goldkügelchen, die sich physisch erhöht auf der Oberfläche des Basismaterials befinden, auch im Höhenbild (Verlauf der Spitzenhöhe als \textit{z-Höhe}) als größere, für sich relativ homogene Strukturen erhöht erscheinen würde, während die Lücken zwischen ihnen aufgrund ihrer deutlich geringere Elektronenaufenthaltswahrscheinlichkeiten (also niedrigeren Tunnelstrom) zu niedrigeren Spitzenposition (z-Werte) führen würden. Die relativ (zur atomaren Größenordnung $\mathcal{O}(\SI{e-10}{\meter}=\unit{\AA})$) großen Kügelchen sollten deutlich als mehr oder weniger zufällig über das Basismaterial verteilt sichtbar werden. Eine genauere Auflösung, wie sie durch den \textit{constant height}-Modus erreicht hätte werden können, hätte zu keinen zusätzlichen Informationen geführt. \todo{this is all bullshit, correct this into a coherent explanation}
 
+\section{Durchführung}
 
-Es wurden die beiden Goldproben (Probe 1: Nummer 16, Probe 2: Nummer 14) nacheinander mit dem RTF untersucht.
 
+\subsection{Verwendete RTM-Spitze und Proben}
 %anmerkungen zum messprozess
+Zunächst werden die beiden Goldproben sowie die verwendete Spitze mit dem USB-Mikroskop dokumentiert. Durch letzteres kann zwar keine quantitative Einschätzung der Qualität der Spitze liefern (dafür müsste das Mikroskop atomare Auflösung haben, da dies die ideale Dicke der Spitze ist), kann aber einen guten Anhaltspunkt liefern, ob der Reißvorgang bei der Spitzenpräperation wie erwünscht eine schräge Kante, bei der eine spitzere Spitze wahrscheinlicher ist, entstanden ist oder ob der Draht planar und eher stumpf abgerissen wurde. Im Versuchsdurchlauf wurden zunächst mehrere Spitzen ausprobiert, gute RTM-Aufnahmen lieferte jedoch nur eine der Spitzen, die in Abb. \ref{fig:spitze_4_scaled.pdf} in einer USB-Mikroskop-Aufnahme abgebildet ist.
+
+\jafps{spitze_4_scaled.pdf}{USB-Mikroskopaufnahme der für die RTM-Aufnahmen genutzten Spitze. Der eingezeichnete Maßstab ergibt sich aus dem Durchmesser des genutzten Platin-Iridium-Draht von $r=\SI{0.3}{\milli\meter}$ \cite[8]{Versuchsanleitung422}. Zum Einfügen des Maßstabs wurde das Bildbearbeitungsprogramm GIMP \cite{gimp} genutzt.}{0.45}
+
+
+Um die USB-Mikroskopaufnahmen der ersten Goldprobe mit einer Skala versehen zu können, wurde jeweils ein Kalibrationsnetzchen mit bekannten Dimensionen in der gleichen Brennebene wie die Aufnahmen der Probe aufgenommen. Aus der so berechenbaren Bildskala kann eine Skala für die Probenaufnahme bestimmt werden.
+Analog wird im Folgenden auch für die USB-Mikroskopaufnahmen der weiteren Proben (zweite Goldprobe, HOPG, \moszwei), jeweils mit individuellen Kalibrationsaufnahmen des Netzchens, vorgegangen.
+
+Das Kalibrationsnetz besitzt ein Netz aus Divisionen der Größe $\frac{\unit[1]{inch}}{100}$ in vertikaler Richtung und $\frac{\unit[1]{Inch}}{400}$ in horizonaler Richtung, siehe Abbildung \ref{fig:netz_gold.pdf}. Aus der Entsprechung $\unit[1]{Inch}=\SI{25.4}{\milli\meter}$\cite[11]{usunits}
+
+\todo{Kalibration Goldprobe 1 mit Netz}
+
+\jafps{netz_gold.pdf}{Aufnahme des Kalibrationsnetzchens der Ausmaße \todo{Skala einfügen}}{0.45}
+
+\jafps{gold.pdf}{\todo{skala fehlt noch}}{0.45}
+
+
 
 \section{Messergebnisse}
+
+
+%\jafps{res/gold_123_s1.pdf}{\todo{Parameter}}{0.45}
+%\jafps{res/gold_124_s1.pdf}{\todo{parameter}}{0.45}
+\jafps{res/gold_126_s4.pdf}{\todo{parameter}}{0.45}
+\jafps{res/gold_127_s4_z.pdf}{\todo{parameter}}{0.45}
+\jafps{res/gold_129_s4.pdf}{\todo{parameter}}{0.45}
+\jafps{res/gold2_130_s4.pdf}{\todo{parameter}}{0.45}
 
 \section{Auswertung}
