--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -218,3 +218,19 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
      year = {1982},
      doi = {10.1103/PhysRevLett.49.57},
 }
+
+
+@misc{gimp,
+    title = {GNU Image Manipulation Program (GIMP)},
+    url = {https://www.gimp.org/downloads},
+    note = {Open Source Software},
+    version = {3.0.6},
+    urldate = {2025-12-06},
+}
+
+@manual{usunits,
+    title = {Weights and Measures of the United States},
+    note = {National Bureau of Standards Special Publication 447},
+    year = {1976},
+    author = {Barbrow, L.E. and Judson, L. V.},
+}
