--- a/422-raster-tunnel-mikroskopie/latex/template.tex
+++ b/422-raster-tunnel-mikroskopie/latex/template.tex
@@ -107,7 +107,7 @@
 \usepackage{graphicx}
 
 
-%\titlehead{\centering\includegraphics[width=0.8\textwidth]{laser_pretty.jpeg}} %for a title picture
+\titlehead{\centering\includegraphics[width=0.6\textwidth]{mos2_usb.jpg}} %for a title picture
 \graphicspath{{../figs/}}
 \author{Leonie Dessau \& Lena Beckmann}
 
