--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -1,2 +1,2 @@
 \chapter{\moszwei}
-bla
+Zuletzt wird noch eine \moszwei Probe untersucht. Molybdän-Sulfid (\moszwei) ist eine Kristallstruktur aus Molybdän und Schwefel, welche ähnlich wie HOPG eine schichtartige Struktur, bei welcher die einzelnen Schichten nur durch Van-der-Vaals Kräfte zusammengehalten werden. Hierbei sind an der Oberfläche Schwefelatome mit einem Abstand von $d = \SI{1}{nm}$ die dominant messbare Struktur \cite{mos2structure}.
