--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -234,3 +234,20 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     year = {1976},
     author = {Barbrow, L.E. and Judson, L. V.},
 }
+
+
+@article{mos2structure,
+  title = {Electronic structure of ${\mathrm{MoSe}}_{2}$, ${\mathrm{MoS}}_{2}$, and ${\mathrm{WSe}}_{2}$. I. Band-structure calculations and photoelectron spectroscopy},
+  author = {Coehoorn, R. and Haas, C. and Dijkstra, J. and Flipse, C. J. F. and de Groot, R. A. and Wold, A.},
+  journal = {Phys. Rev. B},
+  volume = {35},
+  issue = {12},
+  pages = {6195--6202},
+  numpages = {0},
+  year = {1987},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.35.6195},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.35.6195}
+}
+
