now with inches

--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -27,9 +27,7 @@ Zunächst werden die beiden Goldproben sowie die verwendete Spitze mit dem USB-M
 Um die USB-Mikroskopaufnahmen der ersten Goldprobe mit einer Skala versehen zu können, wurde jeweils ein Kalibrationsnetzchen mit bekannten Dimensionen in der gleichen Brennebene wie die Aufnahmen der Probe aufgenommen. Aus der so berechenbaren Bildskala kann eine Skala für die Probenaufnahme bestimmt werden.
 Analog wird im Folgenden auch für die USB-Mikroskopaufnahmen der weiteren Proben (zweite Goldprobe, HOPG, \moszwei), jeweils mit individuellen Kalibrationsaufnahmen des Netzchens, vorgegangen.
 
-Das Kalibrationsnetz besitzt ein Netz aus Divisionen der Größe $1\unit{Inch}/100$ in vertikaler Richtung und $1\text{Inch}/400$ in horizontaler Richtung, siehe Abbildung \ref{fig:netz_gold.pdf}. Aus der Entsprechung $1\text{Inch}=\SI{25.4}{\milli\meter}$\cite[11]{usunits} ergibt sich die Abmessung
-
-\todo{Kalibration Goldprobe 1 mit Netz}
+Das Kalibrationsnetz besitzt ein Netz aus Divisionen der Größe $1~\unit{Inch}/100$ in vertikaler Richtung und $1~\text{Inch}/400$ in horizontaler Richtung, siehe Abbildung \ref{fig:netz_gold.pdf}. Aus der Entsprechung $1~\text{Inch}=\SI{25.4}{\milli\meter}$\cite[11]{usunits} ergibt sich als Unterteilung $\SI{254}{\micro\meter}\times \SI{63.5}{\micro\meter}$ (vertikale $\times$ horizontale Division).
 
 \jafps{netz_gold.pdf}{Aufnahme des Kalibrationsnetzchens der Ausmaße \todo{Skala einfügen}}{0.45}
 
