--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -20,18 +20,18 @@ Auf der glatten Si- oder Saphir-Oberfläche sind so kleine Goldkügelchen ohne f
 \subsection{Verwendete RTM-Spitze und Proben}
 %anmerkungen zum messprozess
 Zunächst werden die beiden Goldproben sowie die verwendete Spitze mit dem USB-Mikroskop dokumentiert. Durch letzteres kann zwar keine quantitative Einschätzung der Qualität der Spitze liefern (dafür müsste das Mikroskop atomare Auflösung haben, da dies die ideale Dicke der Spitze ist), kann aber einen guten Anhaltspunkt liefern, ob der Reißvorgang bei der Spitzenpräperation wie erwünscht eine schräge Kante, bei der eine spitzere Spitze wahrscheinlicher ist, entstanden ist oder ob der Draht planar und eher stumpf abgerissen wurde. Im Versuchsdurchlauf wurden zunächst mehrere Spitzen ausprobiert, gute RTM-Aufnahmen lieferte jedoch nur eine der Spitzen, die in Abb. \ref{fig:spitze_4_scaled.pdf} in einer USB-Mikroskop-Aufnahme abgebildet ist.
-
-\jafps{spitze_4_scaled.pdf}{USB-Mikroskopaufnahme der für die RTM-Aufnahmen genutzten Spitze. Der eingezeichnete Maßstab ergibt sich aus dem Durchmesser des genutzten Platin-Iridium-Draht von $r=\SI{0.3}{\milli\meter}$ \cite[8]{Versuchsanleitung422}. Zum Einfügen des Maßstabs wurde das Bildbearbeitungsprogramm GIMP \cite{gimp} genutzt.}{0.45}
-
-
-Um die USB-Mikroskopaufnahmen der ersten Goldprobe mit einer Skala versehen zu können, wurde jeweils ein Kalibrationsnetzchen mit bekannten Dimensionen in der gleichen Brennebene wie die Aufnahmen der Probe aufgenommen. Aus der so berechenbaren Bildskala kann eine Skala für die Probenaufnahme bestimmt werden.
+\jafps{spitze_4_scaled.pdf}{USB-Mikroskopaufnahme der für die RTM-Aufnahmen genutzten Spitze. Der eingezeichnete Maßstab ergibt sich aus dem Durchmesser des genutzten Platin-Iridium-Draht von $r=\SI{0.3}{\milli\meter}$ \cite[8]{Versuchsanleitung422}. Zum Einfügen des Maßstabs wurde das Bildbearbeitungsprogramm GIMP \cite{gimp} genutzt.}{0.4}
+Um die USB-Mikroskopaufnahmen der ersten Goldprobe mit einer Skala versehen zu können, wird jeweils ein Kalibrationsnetzchen mit bekannten Dimensionen in der gleichen Brennebene wie die Aufnahmen der Probe aufgenommen. Aus der so berechenbaren Bildskala kann eine Skala für die Probenaufnahme bestimmt werden.
 Analog wird im Folgenden auch für die USB-Mikroskopaufnahmen der weiteren Proben (zweite Goldprobe, HOPG, \moszwei), jeweils mit individuellen Kalibrationsaufnahmen des Netzchens, vorgegangen.
+Das Kalibrationsnetz besitzt ein Netz aus Divisionen der Größe $1~\unit{Inch}/100$ in vertikaler Richtung und $1~\text{Inch}/400$ in horizontaler Richtung, siehe Abbildung \ref{fig:netz_gold_scaled.pdf}. Aus der Entsprechung $1~\text{Inch}=\SI{25.4}{\milli\meter}$\cite[11]{usunits} ergibt sich als Unterteilung $\SI{254}{\micro\meter}\times \SI{63.5}{\micro\meter}$ (vertikale $\times$ horizontale Division).
+Die Aufnahmen für die erste Goldprobe sind in Abbildungen \ref{fig:netz_gold_scaled.pdf} und \ref{fig:gold_scaled.pdf} dargestellt.
+\jafps{gold_scaled.pdf}{USB-Mikroskopaufnahme der ersten Goldprobe. Maßstab mithilfe der Kalibrationsaufnahme \ref{fig:netz_gold_scaled.pdf} bestimmt.}{0.4}
+Auf Abbildung \ref{fig:gold_scaled.pdf} sind deutliche Oberflächenunreinheiten erkennbar, die RTM-Aufnahmen haben aber einen deutlich kleineren Bildausschnitt ($\leq \SI{200}{\nano\meter}$), sodass nicht davon ausgegangen werden kann, dass die dort sichtbaren Strukturen diesen mit dem optischen Mikroskop sichtbaren Kratzern entsprechen. \todo{vergleich rtm vs optische korrosion}
+Die korrespondierenden Aufnahmen für die zweite Goldprobe sind in Abbildungen \ref{fig:netz_gold2_scaled.pdf} und \ref{fig:gold2_scaled.pdf} dargestellt.
+\jafps{gold2_scaled.pdf}{USB-Mikroskopaufnahme der zweiten Goldprobe, Maßstab mithilfe der Kalibrationsaufnahme \ref{fig:netz_gold2_scaled.pdf} bestimmt.}{0.4}
 
-Das Kalibrationsnetz besitzt ein Netz aus Divisionen der Größe $1~\unit{Inch}/100$ in vertikaler Richtung und $1~\text{Inch}/400$ in horizontaler Richtung, siehe Abbildung \ref{fig:netz_gold.pdf}. Aus der Entsprechung $1~\text{Inch}=\SI{25.4}{\milli\meter}$\cite[11]{usunits} ergibt sich als Unterteilung $\SI{254}{\micro\meter}\times \SI{63.5}{\micro\meter}$ (vertikale $\times$ horizontale Division).
 
-\jafps{netz_gold.pdf}{Aufnahme des Kalibrationsnetzchens der Ausmaße \todo{Skala einfügen}}{0.45}
 
-\jafps{gold.pdf}{\todo{skala fehlt noch}}{0.45}
 
 
 
