--- a/422-raster-tunnel-mikroskopie/latex/anhang.tex
+++ b/422-raster-tunnel-mikroskopie/latex/anhang.tex
@@ -2,6 +2,9 @@
 
 \section{Kalibrationsaufnahmen des Netzchens}
 
-\jafps{netz_gold_scaled.pdf}{Aufnahme des Kalibrationsnetzchens der Ausmaße $\SI{254}{\micro\meter}\times \SI{63.5}{\micro\meter}$ für die erste Goldprobe. Maßstab eingefügt mit GIMP.}{0.4}
+\jafps{netz_gold_scaled.pdf}{USB-Mikroskopaufnahme des Kalibrationsnetzchens der Ausmaße $\SI{254}{\micro\meter}\times \SI{63.5}{\micro\meter}$ für die erste Goldprobe. Maßstab eingefügt mit GIMP.}{0.4}
 
 \jafps{netz_gold2_scaled.pdf}{USB-Mikroskopaufnahme des Kalibrationsnetzchens für die zweite Goldprobe. Maßstab aus den bekannten Maßen des Netzchens bestimmt und mit GIMP eingefügt.}{0.4}
+
+\jafps{netz_hopg_scaled.pdf}{USB-Mikroskopaufnahme des Kalibrationsnetzchens für die HOPG-Probe. Maßstab aus den Maßen des Netzchens mit GIMP eingefügt.}{0.4}
+\jafps{netz_mos2_scaled.pdf}{USB-Mikroskopaufnahme des Kalibrationsnetzchens für die \moszwei-Probe. Maßstab aus den Maßen des Netzchens mit GIMP eingefügt.}{0.4}
