--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -7,12 +7,8 @@ Um die Funktionsweise des RTM im Bereich größer der atomaren Auflösung von Gr
 \section{Theoretische Überlegungen}
 Es wird nicht direkt Gold untersucht, welches aufgrund seiner elektrisch relativ flachen kristallinen Struktur isoliert zu nur wenige kontrastreichen Aufnahmen führen würde \cite[59-60]{STMrohrer}. Stattdessen werden Proben von Silizium bzw. Saphir verwendet, auf welche Gold aufgedampft wurde \cite[13]{Versuchsanleitung422}.
 
-Auf der glatten Si- oder Saphir-Oberfläche sind so kleine Goldkügelchen ohne festes Muster angeordnet. Sie sollten so bei supra-atomaren Auflösungen des Mikroskops gut sichtbar sein. Eine atomare Auflösung ist bei diesen Proben auch nicht sinnvoll, da Gold, wie genannt, sehr gleichmäßige Elektronenverteilungen aufweist und so keine deutlichen Strukturen innerhalb des Kristallgitters erkennbar sein würden. Durch den Erhitzungsprozess kann allerdings damit gerechnet werden, dass die Goldkügelchen in ihrer Oberfläche stufenförmige Strukturen aufweisen anstatt vollständig glatt zu sein, allerdings ist die Ausprägung der Stufen stark von der erreichten Temperatur während des Erhitzens abhängig \cite[59]{STMrohrer}. Außerdem ist zu beachten, dass die vermessenen Proben \todo{hier noch weitere Ausführung}
+Auf der glatten Si- oder Saphir-Oberfläche sind so kleine Goldkügelchen ohne festes Muster angeordnet. Sie sollten so bei supra-atomaren Auflösungen des Mikroskops gut sichtbar sein. Eine atomare Auflösung ist bei diesen Proben auch nicht sinnvoll, da Gold, wie genannt, sehr gleichmäßige Elektronenverteilungen aufweist und so keine deutlichen Strukturen innerhalb des Kristallgitters erkennbar sein würden. Durch den Erhitzungsprozess kann allerdings damit gerechnet werden, dass die Goldkügelchen in ihrer Oberfläche stufenförmige Strukturen aufweisen anstatt vollständig glatt zu sein, allerdings ist die Ausprägung der Stufen stark von der erreichten Temperatur während des Erhitzens abhängig \cite[59]{STMrohrer}. Außerdem ist zu beachten, dass die vermessenen Proben aus jeweils zwei verschiedenen Atomsorten bestehen (Gold und Silizium bzw. Gold und Saphir), die zu verschiedenen wirkenden Austrittsarbeiten abhängig von der Position der Spitze auf der Proben führen, kann aus dem Tunnelstrom nicht direkt auf die Oberflächentopologie geschlossen werden. Es wird ein Bild der Austrittsarbeiten gemessen, nicht der tatsächlichen physischen Oberflächenbeschaffenheit \cite[3]{Versuchsanleitung422}. Da bei den Goldprobe aufgrund der Herstellungsart jedoch relativ große Kügelchen des Golds der Ausdehnungsgrößenordnung $\mathcal{O}(\unit{nm})$ (siehe auch \cite[13]{Versuchsanleitung422} für de Größenordnung) an den meisten Stellen der Probe mit lokal relativ ebener Austrittsarbeitsverteilung zu erwarten sind (welche bei Gold zudem noch deutlich größer ist als die von Si und Saphir \cite[Anhang A]{crystalworkfuncs}), bilden die erhaltenen RTM-Aufnahmen in guter Näherung die topologische Beschaffenheit der Proben ab.
 
-
-
-
-% %Da die Goldproben durch die unvorhersehbar verteilten Goldkügelchen hohe Korrugation aufweisen, wird im Folgenden das RTM immer im \textit{constant current}-Modus betrieben. Die Parameter des Regelkreises waren dabei auf $P=1000, I=2000$ eingestellt. Eine Aufnahme im \textit{constant height}-Modus hätte eine ausreichend ebene Fläche erfordert, was aber bei den Goldproben zu keinen interessanten Ergebnissen geführt hätte: Es war zu erwarten, dass die Goldkügelchen, die sich physisch erhöht auf der Oberfläche des Basismaterials befinden, auch im Höhenbild (Verlauf der Spitzenhöhe als \textit{z-Höhe}) als größere, für sich relativ homogene Strukturen erhöht erscheinen würde, während die Lücken zwischen ihnen aufgrund ihrer deutlich geringere Elektronenaufenthaltswahrscheinlichkeiten (also niedrigeren Tunnelstrom) zu niedrigeren Spitzenposition (z-Werte) führen würden. Die relativ (zur atomaren Größenordnung $\mathcal{O}(\SI{e-10}{\meter}=\unit{\AA})$) großen Kügelchen sollten deutlich als mehr oder weniger zufällig über das Basismaterial verteilt sichtbar werden. Eine genauere Auflösung, wie sie durch den \textit{constant height}-Modus erreicht hätte werden können, hätte zu keinen zusätzlichen Informationen geführt. \todo{this is all bullshit, correct this into a coherent explanation}
 
 \section{Durchführung}
 
@@ -30,9 +26,9 @@ Auf Abbildung \ref{fig:gold_scaled.pdf} sind deutliche Oberflächenunreinheiten 
 Die korrespondierenden Aufnahmen für die zweite Goldprobe sind in Abbildungen \ref{fig:netz_gold2_scaled.pdf} und \ref{fig:gold2_scaled.pdf} dargestellt.
 \jafps{gold2_scaled.pdf}{USB-Mikroskopaufnahme der zweiten Goldprobe, Maßstab mithilfe der Kalibrationsaufnahme \ref{fig:netz_gold2_scaled.pdf} bestimmt.}{0.4}
 
+\subsection{Einstellung des RTMs}
 
-
-
+Da die Goldproben durch die relativ großen Goldkügelchen hohe Korrugation aufweisen, wird im Folgenden das RTM immer im \textit{constant current}-Modus betrieben. Die Parameter des Regelkreises waren dabei auf $P=1000, I=2000$ eingestellt. Eine Aufnahme im \textit{constant height}-Modus hätte eine ausreichend ebene Fläche erfordert, was aber bei den Goldproben zu keinen interessanten Ergebnissen geführt hätte: Es war zu erwarten, dass die Goldkügelchen, die sich physisch erhöht auf der Oberfläche des Basismaterials befinden, auch im Höhenbild (Verlauf der Spitzenhöhe als \textit{z-Höhe}) als größere, für sich relativ homogene Strukturen erhöht erscheinen würde, während die Lücken zwischen ihnen aufgrund ihrer deutlich geringere Elektronenaufenthaltswahrscheinlichkeiten (also niedrigeren Tunnelstrom) zu niedrigeren Spitzenposition (z-Werte) führen würden. Die relativ (zur atomaren Größenordnung $\mathcal{O}(\SI{e-10}{\meter}=\unit{\AA})$) großen Kügelchen sollten deutlich als mehr oder weniger zufällig über das Basismaterial verteilt sichtbar werden. Eine genauere Auflösung, wie sie durch den \textit{constant height}-Modus erreicht hätte werden können, hätte zu keinen zusätzlichen Informationen geführt. \todo{this is all bullshit, correct this into a coherent explanation}
 
 
 \section{Messergebnisse}
