--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -251,3 +251,13 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
   url = {https://link.aps.org/doi/10.1103/PhysRevB.35.6195}
 }
 
+@article{crystalworkfuncs,
+    title = {Anisotropic work function of elemental crystals},
+    journal = {Surface Science},
+    volume = {687},
+    pages = {48-55},
+    year = {2019},
+    doi = {10.1016/j.susc.2019.05.002},
+    doiurl = {https://doi.org/10.1016/j.susc.2019.05.002},
+    author = {Richard Tran and Xiang-Guo Li and Joseph H. Montoya and Donald Winston and Kristin Aslaug Persson and Shyue Ping Ong},
+}
