--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -8,6 +8,7 @@ Die Verschiebung der Schichten zueinander führt dazu, dass jedes zweite Elektro
 
 
 \section{Durchführung}
+\label{sec:hopg_messung}
 Die HOPG Probe wird zunächst unter dem USB Mikroskop dokumentiert (siehe \ref{fig:HOPG_optisch})
 \todo{bild mit skala}
 
