--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -251,3 +251,11 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
   url = {https://link.aps.org/doi/10.1103/PhysRevB.35.6195}
 }
 
+
+@misc{gwyddion,
+    title = {Gwyddion},
+    url = {https://gwyddion.net/},
+    note = {Open Source Software},
+    version = {2.69},
+    urldate = {2025-12-07},
+}
