--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -49,3 +49,5 @@ C & $8-10$ & $\num{6(1)}$ & $\num{0.32(1)}$ \\
 \caption{Mittelwerte der Daten aus Tabelle \ref{tab:mos_lattice}.}
 \label{tab:mos_lattice_avg}
 \end{table}
+
+Man findet weiterhin die Winkel zwischen den Gruppen als $\Delta\varphi_{A, B} = |\varphi_A - \varphi_B| = $
