--- a/422-raster-tunnel-mikroskopie/latex/anhang.tex
+++ b/422-raster-tunnel-mikroskopie/latex/anhang.tex
@@ -8,3 +8,9 @@
 
 \jafps{netz_hopg_scaled.pdf}{USB-Mikroskopaufnahme des Kalibrationsnetzchens für die HOPG-Probe. Maßstab aus den Maßen des Netzchens mit GIMP eingefügt.}{0.4}
 \jafps{netz_mos2_scaled.pdf}{USB-Mikroskopaufnahme des Kalibrationsnetzchens für die \moszwei-Probe. Maßstab aus den Maßen des Netzchens mit GIMP eingefügt.}{0.4}
+
+\section{RTM-Aufnahmen der ersten Goldprobe} \label{sec:anhanggoldrtm}
+
+\jafps{res/gold_126_s4.pdf}{RTM-Aufnahme (Bildgröße: $\SI{200}{\nano\meter}$) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, Rastergeschwindigkeit $v_R=\SI{200,2}{\nano\meter\per\s}$.}{0.45}
+
+\jafps{res/gold_127_s4_z.pdf}{RTM-Aufnahme ($\SI{200}{\nano\meter}$) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{200,2}{\nano\meter\per\s}$.}{0.45}
