--- a/422-raster-tunnel-mikroskopie/latex/template.tex
+++ b/422-raster-tunnel-mikroskopie/latex/template.tex
@@ -58,7 +58,7 @@
 }
 
 \def\jafps#1#2#3{
-	\begin{figure}[H]
+	\begin{figure}[h]
 		\centering
 		\includegraphics[width=#3\textwidth]{#1}
 		%\includegraphics[height=0.4\textheight]{#1}
