--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -50,4 +50,7 @@ C & $8-10$ & $\num{6(1)}$ & $\num{0.32(1)}$ \\
 \label{tab:mos_lattice_avg}
 \end{table}
 
-Man findet weiterhin die Winkel zwischen den Gruppen als $\Delta\varphi_{A, B} = |\varphi_A - \varphi_B| = $
+Die so bestimmten Gitterabstände aus Tabelle \ref{tab:mos_lattice_avg} liegen jeweils innerhalb weniger Prozent von dem erwarteten Wert von $d = \SI{0.31604}{\nano\meter}$. Da der Gitterabstand in alle Raumrichtungen gleich groß ist, ist es Sinnvoll den Mittelwert der drei Richtungen zu betrachten. Hierbei ergibt sich ein Wert von $\bar{L} = \SI{0.30(1)}{\nano\meter}$, was innerhalb einer $1-\sigma$ Umgebung des Erwartungswerts liegt.
+Man findet weiterhin die Winkel zwischen den Gruppen als $\Delta\varphi_{A, B} = |\varphi_A - \varphi_B| = \SI{74(1)}{\degree}$, $\Delta\varphi_{A, C} = \SI{56(1)}{\degree}$ und $\Delta\varphi_{B, C} = \SI{50(1)}{\degree}$. Hier ist eine deutlich Abweichung von den Erwarteten $\Delta\varphi_x = \SI{60}{\degree}$ festzustellen. Es fällt weiterhin auf, dass die Länge in Richtung A (vgl. Tabelle \ref{tab:mos_lattice_avg}) kleiner als der Erwartungswert, die in Richtung C größer (wenngleich noch in einer $1-\sigma$ Umgebung zum Erwartungswert) sind. Auch ist in den unkorrigierten Messdaten \todo{referenzieren} eine insgesamte Schieflage zu erkennen. Dies passt insofern gut zusammen, da eine Aufnahme, nicht aus der Flächennormalen die Winkel und Längen verzerrt. Im Fall der Gitterabstände ist dies hier nicht Tragisch, da die Änderung zum einen klein ist, zum anderen die A Richtung gestaucht und die C Richtung gestreckt wird, was im Mittel wieder ein gutes Ergebnis liefert.
+
+Qualitativ ist an den Atomaren aufnahmen von \moszwei noch anzumerken, dass die Atome eine relativ große Ausdehnung haben, was das exakte vermessen der Gitterstruktur erschwert. Hierbei mag es Sinnvoll sein mit geringerem Abstand Messungen durchzuführen (Setpoint des Stroms größer und/oder Tunnelspannung kleiner) um so die lokalisation der Gitteratome genauer zu ermöglichen.
