--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -29,8 +29,14 @@ Da die Goldproben durch die relativ großen Goldkügelchen auf den flachen Basis
 
 In den Abbildungen \ref{fig:res/gold_126_s4.pdf},\ref{fig:res/gold_127_s4_z.pdf} und \ref{fig:res/gold_129_s4.pdf} sind die RTM-Aufnahmen der ersten Goldprobe (Nummer 16) dargestellt. In Abbildung \ref{fig:res/gold2_130_s4.pdf} ist zusätzlich noch eine RTM-Aufnahme der zweiten Goldprobe (Nummer 14) dargestellt.
 Zur besseren Übersichtlichkeit ist von der ersten Probe nur eins der Bilder hier dargestellt, die anderen beiden sind im Anhang (Abschnitt \ref{sec:anhanggoldrtm}) zu finden.
+Die Aufnahmen wurden wie oben erläutert alle im \textit{constant-current}-Modus aufgenommen.
 
+\jafps{res/gold_129_s4.pdf}{RTM-Aufnahme (Bildgröße: $\SI{200}{\nano\meter}$, z-Darstellung) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{250,3}{\nano\meter\per\s}$.}{0.45}
 
-\jafps{res/gold_129_s4.pdf}{RTM-Aufnahme ($\SI{200}{\nano\meter}$) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{250,3}{\nano\meter\per\s}$.}{0.45}
+\jafps{res/gold2_130_s4.pdf}{RTM-Aufnahme ($\SI{200}{\nano\meter}$, z-Darstellung) von Goldprobe 2 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{200,2}{\nano\meter\per\s}$.}{0.4}
 
-\jafps{res/gold2_130_s4.pdf}{RTM-Aufnahme ($\SI{200}{\nano\meter}$) von Goldprobe 2 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{200,2}{\nano\meter\per\s}$.}{0.4}
+Die Aufnahmen der Goldproben weisen wie erwartet eine raue Struktur auf. Es sind auf den Aufnahmen der ersten Probe wolkenförmige, nicht ganz runde Strukturen mit für sich jeweils recht ebener Oberfläche zu erkennen. Es ist hier immer das Höhenbild, also die Abbildung der z-Position der Mikroskopspitze zur Beibehaltung eines Tunnelstroms gleich dem Referenzwert $I_\text{Setpoint}$, abgebildet, die Farbskala der Aufnahmen entspricht dabei bei dunklerer Farbe einem kleineren z-Abstand der Spitze von der Probenoberfläche am jeweiligen Pixel-Ort. Auf den Aufnahme der ersten Probe sind kleine, dunklere Bereiche zu erkennen, bei denen die Austrittsarbeit niedriger war als bei den helleren Bereichen (welche vermutlich ungefähr den Goldkügelchen auf der Probenoberfläche entsprechen) oder die Probenoberfläche physisch tiefer war als bei den helleren (Gold-)Gebieten. Es kann auch eine Kombination der beiden Faktoren vorhanden sein. Die dunkleren Flecken entsprechen also wahrscheinlich den freien Räumen zwischen den aufgedampften Goldkügelchen. Es gibt auch noch kleinere Bereiche mit helleren (höheren) Flecken, dies könnte entweder von kleineren Goldflocken oder (ggf. durch das Erhitzen hervorgerufenen) Stufen (siehe Abschnitt \ref{sec:theoriegold) stammen. Messungenauigkeiten durch eine nicht-ideale, d.h. nicht einatomige, Spitze sind allerdings hier auch denkbar als Ursache. Auch die auf den USB-Mikroskopaufnahmen optisch sichtbaren Kratzer in der Probenoberfläche sowie mögliche weitere kleinere Kratzer, die dieses Mikroskop nicht mehr auflösen kann, sind als Ursache für die flockenartigen Bereiche möglich.
+Insgesamt ist auf den Aufnahmen der ersten Goldprobe eine Struktur zu erkennen, die darauf hinweist, dass die Probe aus Gold und Saphir bestand. Vergleiche hierzu auch die Referenzaufnahme zu Gold auf Saphir in \cite[13]{Versuchsanleitung422}, die eine ähnliche Struktur aufweist.
+
+Die Aufnahme der zweiten Probe weist auffallend im unteren Bildteil eine Stufe auf. Da die Aufnahme immer von unten nach oben linienweise stattfindet, ist hier davon auszugehen, dass sich in diesem Bereich der Regelkreis und die Piezoelemente noch nicht der Struktur der Probe angepasst haben, insbesondere, da Piezokristalle eine Hysterese aufweisen
+\cite{piezoelements} und davor die erste Goldprobe ausgemessen wurde, die eine sichtbar andere Struktur aufweist, auf welche die Steuerung vermutlich noch geringfügig angepasst war. Daher wird dieser Bereich der Probe nicht weiter beachtet und nur der obere Teil untersucht. Hier ist eine deutlich homogenere Struktur zu erkennen als bei den Aufnahmen der ersten Goldprobe. Es sind aber strangförmige, helle (hohe) Bereiche zu erkennen, zwischen denen Bereiche dunklerer Farbe, also niedrigerer z-Position, liegen. Diese Struktur ähnelt der Referenzaufnahme für Gold auf Silizium in \cite[13]{Versuchsanleitung422}, jedoch hat die Aufnahme \ref{fig:res/gold2_130_s4.pdf} einen größeren Bildausschnitt als das Referenzbild. Die Strukturen in diesem sollten also so nicht in der gemachten Aufnahme sichtbar sein. Die Strangstruktur der Aufnahme weist trotzdem darauf hin, dass es sich hier um eine Aufnahme von Gold auf Silizium handelt. Für eine Verbesserung der Auflösung, sodass sichergestellt werden kann, dass es sich tatsächlich um ähnliche Strukturen wie in der Referenzaufnahme handelt, wäre eine \textit{constant-height}-Aufnahme eines kleinen, anscheinend ebenen Teilstücks des Bildausschnitts sinnvoll. Eine Aufnahme im \textit{constant-height}-Modus führt in der Regel zu besserer Auflösung der tatsächlichen Oberflächenstruktur, da Resonanzen und Störeffekte des Regelkreises so stark reduziert werden können. Um die eingebaute Spitze zu schonen, wurde für diese Probe jedoch auf eine solche Aufnahme verzichtet. Die gemachten Bilder, insbesondere von der ersten Probe, zeigen insgesamt ein gut funktionierendes RTM.
