--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -261,3 +261,15 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     doiurl = {https://doi.org/10.1016/j.susc.2019.05.002},
     author = {Richard Tran and Xiang-Guo Li and Joseph H. Montoya and Donald Winston and Kristin Aslaug Persson and Shyue Ping Ong},
 }
+
+
+@article{piezoelements,
+    title = {Compensating hysteresis and mechanical misalignment in piezo-stepper actuators},
+    journal = {Mechatronics},
+    volume = {111},
+    pages = {103394},
+    year = {2025},
+    doi = {10.1016/j.mechatronics.2025.103394},
+    doiurl = {https://doi.org/10.1016/j.mechatronics.2025.103394},
+    author = {Max {van Meer} and Tim {van Meijel} and Emile {van Halsema} and Edwin Verschueren and Gert Witvoet and Tom Oomen},
+}
